--- a/style.css
+++ b/style.css
@@ -18,39 +18,43 @@ header
   top: 0;
   left: 0;
   width: 100%;
-  padding: 40px 100px;
+  padding: 35px 45px;
   z-index: 1000;
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
+
 header .logo
 {
-  font-family: 'Orbitron';
-  font-weight: 300;
+  height: auto;
+  width: 90px;
+  cursor: pointer;
+}
+
+.nav {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+	cursor: pointer;
+}
+
+
+.nav li {
+  float: right;
+}
+
+
+.nav li a {
+  padding: 14px 30px;
+  text-align: center;
+  font-family: 'Hoover';
+  font-size: 1.2rem;
+  letter-spacing: .1rem;
   color: #fff;
-  text-transform: uppercase;
-  cursor: pointer;
+  text-decoration: none;
 }
-.toggle
-{
-  position: relative;
-  width: 60px;
-  height: 60px;
-  background: url(https://i.ibb.co/HrfVRcx/menu.png);
-  background-repeat: no-repeat;
-  background-size: 30px;
-  background-position: center;
-  cursor: pointer;
-}
-.toggle.active
-{
-  background: url(https://i.ibb.co/rt3HybH/close.png);
-  background-repeat: no-repeat;
-  background-size: 25px;
-  background-position: center;
-  cursor: pointer;
-}
+
 .showcase
 {
   position: absolute;
@@ -83,61 +87,48 @@ header .logo
 
 .text
 {
-  position: relative;
+  margin-left: 33rem;
+  position:relative;
   z-index: 10;
 }
 
 .text h2
 {
   font-family: 'Cormorant Garamond';
-  font-size: 3em;
-  letter-spacing: 2rem;
+  font-size: 3.5em;
+  letter-spacing: 3.5rem;
   font-weight: 600;
   color: #fff;
-  line-height: 3em;
+  line-height: 2em;
+  text-align: center;
 }
-.text h3
-{
+.text h3.vidtext {
   font-family: 'Cormorant Garamond';
-  font-size: 2em;
-  letter-spacing: .3rem;
+  font-size: 1.5em;
+  letter-spacing: .6rem;
   font-weight: 600;
   color: #fff;
   line-height: 1em;
+  text-align:left;
 }
-.text p
-{
-  font-size: .9em;
+
+.text h3.phototext {
+  font-family: 'Cormorant Garamond';
+  font-size: 1.5em;
+  letter-spacing: .6rem;
+  font-weight: 600;
   color: #fff;
-  margin: 20px 0px;
-  font-weight: 50;
-  max-width: 700px;
-  text-transform: uppercase;
-  letter-spacing: .1rem;
+  line-height: 1em;
+  text-align: right;
+  margin-right: 3rem;
 }
-.text a
-{
-  display: inline-block;
-  font-size: 1em;
-  background: #fff;
-  padding: 10px 30px;
-  text-transform: uppercase;
-  text-decoration: none;
-  font-weight: 500;
-  margin-top: 10px;
-  color: #111;
-  letter-spacing: 2px;
-  transition: 0.2s;
-}
-.text a:hover
-{
-  letter-spacing: 6px;
-}
+
 .social
 {
   position: absolute;
   z-index: 10;
   bottom: 20px;
+  margin-left: -4rem;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -148,6 +139,8 @@ header .logo
 }
 .social li a
 {
+  height:auto;
+  width: 30px;
   display: inline-block;
   margin-right: 20px;
   filter: invert(1);
@@ -158,35 +151,7 @@ header .logo
 {
   transform: scale(0.5) translateY(-15px);
 }
-.menu
-{
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 300px;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-.menu ul
-{
-  position: relative;
-}
-.menu ul li
-{
-  list-style: none;
-}
-.menu ul li a
-{
-  text-decoration: none;
-  font-size: 24px;
-  color: #111;
-}
-.menu ul li a:hover
-{
-  color: #03a9f4; 
-}
+
 
 @media (max-width: 991px)
 {
